--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -7,6 +7,7 @@
 		<title>{{template "title" .}}</title>
 	</head>
 	<body>
+		{{template "nav" .}}
 		<main>{{template "main" .}}</main>
 	</body>
 </html>
