--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -5,6 +5,26 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{{template "title" .}}</title>
+
+		<!-- Also link to some fonts hosted by Google -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap"
+			rel="stylesheet"
+		/>
+
+		<style>
+			* {
+				font-family: "Fira Code", monospace;
+			}
+			body {
+				padding: 1rem;
+			}
+			ul {
+				padding: 0;
+			}
+		</style>
 	</head>
 	<body>
 		{{template "nav" .}}
