--- a/ui/html/pages/home.tmpl.html
+++ b/ui/html/pages/home.tmpl.html
@@ -1,3 +1,3 @@
 {{define "title"}}Home {{end}} {{define "main"}}
-<h1>The home page...</h1>
-{{end}}
+<h1>Howdy...</h1>
+{{template "about" .}} {{end}}
