add list of links to the blogs page

--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -24,6 +24,12 @@
 			ul {
 				padding: 0;
 			}
+			.blogLinks {
+				display: flex;
+				flex-direction: column;
+				justify-content: left;
+				gap: 1rem;
+			}
 		</style>
 	</head>
 	<body>
