add customer err to not found template

--- a/ui/html/pages/not-found.tmpl.html
+++ b/ui/html/pages/not-found.tmpl.html
@@ -1,3 +1,5 @@
 {{define "title"}}Not found {{end}} {{define "main"}}
 <h1>Page not found...</h1>
-{{end}}
+{{if .CustomError}}
+<p>{{.CustomError}}</p>
+{{end}} {{end}}
