--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -13,24 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap"
 			rel="stylesheet"
 		/>
-
-		<style>
-			* {
-				font-family: "Fira Code", monospace;
-			}
-			body {
-				padding: 1rem;
-			}
-			ul {
-				padding: 0;
-			}
-			.blogLinks {
-				display: flex;
-				flex-direction: column;
-				justify-content: left;
-				gap: 1rem;
-			}
-		</style>
+		<link rel="stylesheet" href="/static/css/main.css" />
 	</head>
 	<body>
 		{{template "nav" .}}
