--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -13,6 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="icon" href="/static/img/cartoon-me.ico" />
 		<link rel="stylesheet" href="/static/css/main.css" />
 	</head>
 	<body>
